--- a/releases.json
+++ b/releases.json
@@ -12,7 +12,7 @@
 		"downloadUrl": "https://github.com/caddis/craft-presto/archive/0.6.0.zip",
 		"date": "2017-05-10T20:41:59",
 		"notes": [
-			"[Added] Cron cache purging for load balancer implementations."
+			"[Added] Added cron cache purging for load balancer implementations."
 		]
 	}
 ]
