--- a/releases.json
+++ b/releases.json
@@ -26,7 +26,7 @@
 	{
 		"version": "0.6.2",
 		"downloadUrl": "https://github.com/lewiscommunications/craft-presto/archive/0.6.2.zip",
-		"date": "2017-09-14T16:06:13-05:00",
+		"date": "2017-09-14T21:06:13+00:00",
 		"notes": [
 			"[Fixed] Fixed issue where sites with multiple locales were caching incorrectly."
 		]
